Fix styles for display on firefox

--- a/styles/mock_home.css
+++ b/styles/mock_home.css
@@ -109,7 +109,7 @@ input[type='number'] {
 
 select {
 	width: 180px;
-    height: 25px;
+    height: 27px;
 	margin: 5px;
 	padding: 1px 3px;
 	font-family: 'Exo', sans-serif;
